--- a/aboly.html
+++ b/aboly.html
@@ -1189,7 +1189,7 @@ img.characterimg {
 <div class="lyblobtag"><a href="ly#3.1">3.1</a></div>
 <div class="lybloboriginaltext"><p>孔子谓<a href="#jishi">季氏</a>：“八佾舞于庭，是可忍也，孰不可忍也？”</p></div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
-<li><p><span class="lyterm">谓</span>：评论，评说。句式“A谓B”的意思是A评论B，“A谓B曰”是A对B说。<span class="lyexample"><span>【例】</span><span><a href="#13.8" class="lyref">13.8</a> <span class="lyq">子谓卫公子荆善居室。</span><a href="#2.21" class="lyref">2.21</a> <span class="lyq">或谓孔子曰：“子奚不为政？”</span></span></span><a href="#9.21" class="lyref">9.21</a>  是唯一的特例。</p></li>
+<li><p><span class="lyterm">谓</span>：评论，评说。句式“A谓B”的意思是A评论B，“A谓B曰”是A对B说。<span class="lyexample"><span>【例】</span><span><a href="#13.8" class="lyref">13.8</a> <span class="lyq">子谓卫公子荆善居室。</span><a href="#2.21" class="lyref">2.21</a> <span class="lyq">或谓孔子曰：“子奚不为政？”</span></span></span><a href="#9.21" class="lyref">9.21</a> <span class="lyq">子谓颜渊曰</span>是唯一的特例。</p></li>
 <li>
 <p><span class="lyterm">八佾（<span class="lypinyin">yì</span>）</span>：8×8人的舞蹈方阵。<span class="lyterm">佾</span>：乐舞的队列。据《左传·隐公五年》，天子才可用八佾，诸侯用六佾，卿大夫用四佾，士用二佾。因为<a href="#zhougong">周公</a>的功德，鲁国也被特许使用八佾。季氏作为卿大夫而用八佾，是<a href="#zhengming">非分越礼</a>的。</p>
 <a id="jianyongbayi"></a><div class="lyseealso">
@@ -1653,7 +1653,10 @@ img.characterimg {
 <div class="lybloboriginaltext"><p>子曰：“君子怀德，小人怀土；君子怀刑，小人怀惠。”</p></div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
 <li><p><span class="lyterm">君子</span>、<span class="lyterm">小人</span>分别指居上位者和平民百姓，也就是治人者和治于人者。本章反映了孔子的政治模型。<span class="lyseealso"><span>【参】</span><span><a href="#12.19" class="lyref">12.19</a>  君子之德与小人之德。《孟子·滕文公上》：<span class="lyq">无君子莫治<a href="#yeren">野人</a>，无野人莫养君子。</span></span></span></p></li>
-<li><p><span class="lyterm">怀</span>：心中存想，关心，在意，care about。<span class="lyterm">怀土</span>：安心满足于眼前的存身之地，后来引申为思念故乡。<span class="lyexample"><span>【例】</span><span>《汉书·叙传》：<span class="lyq">寤戍卒之言，断怀土之情。</span>（<a href="#wumei">寤</a>：醒悟。）</span></span></p></li>
+<li>
+<p><a id="huai2a"></a><span class="lyterm">怀</span>：心中挂念，关心，在意，care about，也就是现代口语的“放在心上”。<span class="lyexample"><span>【例】</span><span>西晋张华《女史箴》第4个故事“班婕妤辞辇”：<span class="lyq">夫岂不怀？防微虑远。</span>事见《汉书·外戚传下》。</span></span></p>
+<p><span class="lyterm">怀土</span>：安心满足于眼前的存身之地，后来引申为思念故乡。<span class="lyexample"><span>【例】</span><span>《汉书·叙传》：<span class="lyq">寤戍卒之言，断怀土之情。</span>（<a href="#wumei">寤</a>：醒悟。）</span></span></p>
+</li>
 <li><p><span class="lyterm">刑</span>：法度，规范。<span class="lyexample"><span>【例】</span><span>《左传·襄公二十七年》：<span class="lyq">君失其信，而国无刑，不亦难乎！</span></span></span></p></li>
 <li><p><a id="hui4"></a><span class="lyterm">惠</span>：恩惠，利益。<span class="lyexample"><span>【例】</span><span><a href="#17.6" class="lyref">17.6</a> <span class="lyq">惠则足以使人。</span></span></span><span class="lyseealso"><span>【参】</span><span>《谷梁传·隐公元年》：<span class="lyq">《<a href="#chunqiu">春秋</a>》贵义而不贵惠，信道而不信邪。</span></span></span></p></li>
 </ul></div>
@@ -1802,8 +1805,8 @@ img.characterimg {
 <li><p><span class="lyterm">若</span>：近指代词，这，此。<span class="lyexample"><span>【例】</span><span>《孟子·梁惠王上》：<span class="lyq">以若所为，求若所欲，犹缘木而求鱼也。</span>（缘：攀爬。）</span></span>孔子也用这句话<a href="#14.5">称赞过</a>南宫适。</p></li>
 <li><p><a id="zhe3"></a><span class="lyterm">者</span>：表示假设的助词，用于复合句中前一分句的末尾：假如鲁国没有（其他）君子的话……放在这个位置的<span class="lyterm">者</span>还可表示判断。<span class="lyexample"><span>【例】</span><span><a href="#6.28" class="lyref">6.28</a> <span class="lyq">予所否者，天厌之！天厌之！</span><a href="#6.30" class="lyref">6.30</a> <span class="lyq">夫仁者，己欲立而立人，己欲达而达人。</span></span></span></p></li>
 <li>
-<p><span class="lyterm">斯焉取斯？</span>：他是从哪里学到这种品德的呢？第一个<span class="lyterm">斯</span>指子贱，第二个指作为君子的品德。<span class="lyterm">取</span>：指效法，吸取。</p>
-<p>《说苑·政理》记载了孔子这句赞叹的来历。孔子有个侄子与子贱同期为官，孔子问侄子从仕以来的所得所失，回答是无所得而有三失：政务繁忙荒废了学业，薪水微薄疏远了亲戚，公事多急怠慢了朋友。又问子贱，回答却是无所失而有三得：<span class="lyq">始诵之文，今履而行之，是学日益明也，所得者一也；奉禄虽少，鬻鬻得及亲戚，是以亲戚益亲也，所得者二也；公事虽急，夜勤吊死视病，是以朋友益亲也，所得者三也。</span>（鬻（<span class="lypinyin">zhōu</span>）：通“粥”。）</p>
+<p><span class="lyterm">斯焉取斯？</span>：他是从哪里学到这种品德的呢？第一个<span class="lyterm">斯</span>指子贱，第二个指作为君子的品德。<span class="lyterm">取</span>：指吸取，效法。</p>
+<p>《说苑·政理》记载了孔子这句赞叹的来历。孔子有个侄儿与子贱同期为官，孔子问侄儿从仕以来的所得所失，回答是无所得而有三失：政务繁忙荒废了学业，薪水微薄疏远了亲戚，公事多急怠慢了朋友。又问子贱，回答却是无所失而有三得：<span class="lyq">始诵之文，今履而行之，是学日益明也，所得者一也；奉禄虽少，鬻鬻得及亲戚，是以亲戚益亲也，所得者二也；公事虽急，夜勤吊死视病，是以朋友信笃也，所得者三也。</span>（鬻（<span class="lypinyin">zhōu</span>）：通“粥”。）</p>
 </li>
 </ul></div>
 </div>
@@ -1978,7 +1981,7 @@ img.characterimg {
 <div class="lybloboriginaltext"><p>季文子三思而后行。子闻之，曰：“再，斯可矣。”</p></div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
 <li><p><a id="jiwenzi"></a><span class="lyterm">季文子</span>（？—前568年）：季孙行父，<a href="#jiyou">季友</a>之孙，<a href="#jishi">季孙氏</a>第2代宗主，谥号是文，曾任鲁国正卿。他辅佐了<a href="#xuangong">宣公</a>、成公、<a href="#xianggong">襄公</a>三代国君，廉洁奉公，《史记·鲁周公世家》说他<span class="lyq">家无衣帛之妾，厩无食粟之马，府无金玉。</span></p></li>
-<li><p><span class="lyterm">再</span>：两次，也可以指第二次。<span class="lyexample"><span>【例】</span><span>《左传·庄公十年》：<span class="lyq">一鼓作气，再而衰，三而竭。</span>成语“三思而行”已成为褒义词，指反复慎重考虑后再去做事，常用于劝告。</span></span></p></li>
+<li><p><a id="zai4"></a><span class="lyterm">再</span>：两次，也可以指第二次。<span class="lyexample"><span>【例】</span><span>《左传·庄公十年》：<span class="lyq">一鼓作气，再而衰，三而竭。</span>成语“三思而行”已成为褒义词，指反复慎重考虑后再去做事，常用于劝告。</span></span></p></li>
 </ul></div>
 </div>
 <a id="5.21"></a><div class="lyblob">
@@ -2036,7 +2039,7 @@ img.characterimg {
 <div class="lybloboriginaltext"><p>子曰：“巧言、令色、足恭，左丘明耻之，丘亦耻之。匿怨而友其人，左丘明耻之，丘亦耻之。”</p></div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
 <li><p><a id="zugong"></a><span class="lyterm">足恭</span>：指过分恭顺，即谄媚巴结。</p></li>
-<li><p><span class="lyterm">左丘明</span>：春秋末期鲁国史官，与孔子同时稍晚。据《汉书·司马迁传》，他是《左传》的作者、《国语》的编纂者。按司马迁《报任安书》的说法，他在编纂《国语》时已经失明了。</p></li>
+<li><p><span class="lyterm">左丘明</span>：春秋末期鲁国史官，与孔子同时稍晚，生平不详。据《汉书·司马迁传》，他是《左传》的作者、《国语》的编纂者。按司马迁《报任安书》的说法，他在编纂《国语》时已经失明了。据《汉书·刘歆传》，<span class="lyq">歆以为左丘明好恶与圣人同，亲见夫子</span>，也许是根据本章的附会。</p></li>
 <li><p><a id="chenghu"></a><span class="lyterm">丘</span>：孔子的自称。古代言谈中自称己名，表示谦逊。父对子、师对徒，也常直呼其名。但直称长辈或平辈的名是不礼貌的，至少很不正式（平辈的情况），正式应该称对方的字（<span class="lykeyword">表字</span>，常与名的意义相关）。唐宋起又流行用号（<span class="lykeyword">别号</span>），可以有不止一个，可以自拟或受赠，较为风雅。注意观察《论语》中不同关系、不同环境的称呼，容易理解礼仪上的区别。<span class="lyexample"><span>【例】</span><span>诸葛亮《前出师表》：<span class="lyq">臣亮言：先帝创业未半而中道<a href="#hong1">崩</a>殂……</span>（殂（<span class="lypinyin">cú</span>）：死。）</span></span><span class="lyseealso"><span>【参】</span><span>《礼记·檀弓上》：<span class="lyq">幼名，冠字，五十以伯仲，死谥，周道也。</span>北齐颜之推《颜氏家训·风操》：<span class="lyq">古者，名以正体，字以表德，名终则讳之，字乃可以为孙氏。</span></span></span></p></li>
 </ul></div>
 </div>
@@ -2058,7 +2061,7 @@ img.characterimg {
 <li>
 <p><a id="huai2"></a><span class="lyterm">怀</span>：（使）依附，即安抚，爱护。</p>
 <a id="huairouyuanren"></a><div class="lyseealso">
-<p><span>【参】</span><span>中国古代素有“怀柔<a href="#yuanren">远人</a>”的政治理念，怀即来，柔即安，均为使动用法。怀的这个含义，可理解为源自想念，即给予恩惠，使其感念向往；也可理解为源自胸怀，即宽厚仁爱，使之归于怀抱。</span></p>
+<p><span>【参】</span><span>中国古代素有“怀柔<a href="#yuanren">远人</a>”的政治理念，怀即来，柔即安，均为使动用法。怀的这个含义，可理解为源自<a href="#huai2a">想念</a>，即给予恩惠，使其感念向往；也可理解为源自胸怀，即宽厚仁爱，使之归于怀抱。</span></p>
 <p>这前一种解释，例证如<a href="#zichan">子产</a>去世时民众发自内心的悲痛，反例如《史记·酷吏列传》所载，汉武帝的<a href="#tingwei">廷尉</a>张汤自幼娴于刀笔，<span class="lyq">为人多诈，舞智以御人，……文深意忌不专平，……舞文巧诋以辅法，……百姓不安其生</span>，所以<span class="lyq">张汤死而民不思</span>（《史记·平准书》）。</p>
 <p>后一种解释，在乔治·奥威尔（George Orwell）的小说《动物庄园》（<em>Animal Farm</em>）第一章，谷仓集会里，有个生动的场景可以作为写照：</p>
 <div class="lyquotepara">
@@ -3695,7 +3698,7 @@ img.characterimg {
 <div class="lyblobtag"><a href="ly#11.6">11.6</a></div>
 <div class="lybloboriginaltext"><p><a href="#nangongkuo">南容</a>三复“白圭”，孔子以其兄之子妻之。</p></div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
-<li><p><span class="lyterm">三复</span>：多次重读。<a id="san1"></a><span class="lyterm">三</span>是约数，多次，反复。<span class="lyexample"><span>【例】</span><span>《史记·屈原贾生列传》：<span class="lyq">其存君兴国而欲反覆之，一篇之中，三致志焉。</span>（反覆：扭转振救。）</span></span></p></li>
+<li><p><span class="lyterm">三复</span>：多次重读。<a id="san1"></a><span class="lyterm">三</span>是概数，多次，反复。类似地，现代汉语也常用的“<a href="#zai4">再</a>三”，不是两次三次，而是反复多次。<span class="lyexample"><span>【例】</span><span>《史记·屈原贾生列传》：<span class="lyq">其存君兴国而欲反覆之，一篇之中，三致志焉。</span>（反覆：扭转振救。）</span></span></p></li>
 <li><p><span class="lyterm">白圭</span>：指《诗经·大雅·抑》中的诗句：<span class="lyq">白<a href="#gui1">圭</a>之玷，尚可磨也；斯言之玷，不可为也</span>，意思是错话一说出口就再也无法挽回了。原诗是讽谏<a href="#zhouliwang">周厉王</a>修德守礼，并以自警。</p></li>
 </ul></div>
 </div>
@@ -3849,7 +3852,7 @@ img.characterimg {
 <div class="lybloboriginaltext"><p>子曰：“论笃是与，君子者乎，色庄者乎？”</p></div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
 <li>
-<p><span class="lyterm">论笃是与</span>：“与论笃”的倒装，称赞（别人）说话诚实可靠。<span class="lyterm">论笃</span>用作名词，指这样的人。和后一句连起来，意思是要注意辨别论者的内在，不要迷惑于表面。<span class="lyseealso"><span>【参】</span><span><a href="#5.10" class="lyref">5.10</a> </span></span></p>
+<p><span class="lyterm">论笃是<a href="#yu3a">与</a></span>：“与论笃”的倒装，称赞（别人）说话诚实可靠。<span class="lyterm">论笃</span>用作名词，指这样的人。和后一句连起来，意思是要注意辨别论者的内在，不要迷惑于表面。<span class="lyseealso"><span>【参】</span><span><a href="#5.10" class="lyref">5.10</a> </span></span></p>
 <p><a id="shi4"></a><span class="lyterm">是</span>：助词，用在动词和宾语之间，把宾语提前表示强调。<span class="lyexample"><span>【例】</span><span><a href="#16.1" class="lyref">16.1</a> <span class="lyq">求！无乃尔是过与？</span>成语“唯命是从”、“马首是瞻”。</span></span></p>
 </li>
 <li><p><span class="lyterm">色庄</span>：指脸上装出道貌岸然的样子。</p></li>
@@ -4538,7 +4541,7 @@ img.characterimg {
 <a id="14.2"></a><div class="lyblob">
 <div class="lyblobtag"><a href="ly#14.2">14.2</a></div>
 <div class="lybloboriginaltext"><p>子曰：“士而怀居，不足以为士矣。”</p></div>
-<div class="lyblobannotation"><ul class="lyblobitemize"><li><p><span class="lyterm">怀居</span>：恋家，贪图安逸的生活。<span class="lyseealso"><span>【参】</span><span>《国语·晋语四》载，前644年<a href="#jinwengong">重耳</a>流亡到齐国，<a href="#qihuangong">齐桓公</a>待之甚善，并以宗室之女齐姜许配他为妻。重耳乐不思晋，<span class="lyq">将死于齐而已矣，曰：“民生安乐，谁知其他？”</span>次年齐桓公去世，齐国连续内乱，直到前639年重耳仍不舍离齐。齐姜劝他说：<span class="lyq">人不求及，其能及乎？日月不<a href="#chu3">处</a>，人谁获安？西方之书有之曰：“怀与安，实疚大事。”……齐国之政败矣，晋之无道久矣，从者之谋忠矣，时日及矣，公子<a href="#ji1a">几</a>矣。君国可以<a href="#ji4">济</a>百姓而释之者，非人也。败不可处，时不可失，忠不可弃，怀不可从，子必速行！……子必有晋，若何怀安？</span>（疚：害。君国：做一国之君。）重耳不听，于是齐姜把重耳灌醉，让他的亲随带他离开齐国了。</span></span></p></li></ul></div>
+<div class="lyblobannotation"><ul class="lyblobitemize"><li><p><span class="lyterm"><a href="#huai2a">怀</a>居</span>：恋家，贪图安逸的生活。<span class="lyseealso"><span>【参】</span><span>《国语·晋语四》载，前644年<a href="#jinwengong">重耳</a>流亡到齐国，<a href="#qihuangong">齐桓公</a>待之甚善，并以宗室之女齐姜许配他为妻。重耳乐不思晋，<span class="lyq">将死于齐而已矣，曰：“民生安乐，谁知其他？”</span>次年齐桓公去世，齐国连续内乱，但直到前639年重耳仍不舍离齐。齐姜劝他说：<span class="lyq">人不求及，其能及乎？日月不<a href="#chu3">处</a>，人谁获安？西方之书有之曰：“怀与安，实疚大事。”……齐国之政败矣，晋之无道久矣，从者之谋忠矣，时日及矣，公子<a href="#ji1a">几</a>矣。君国可以<a href="#ji4">济</a>百姓而释之者，非人也。败不可处，时不可失，忠不可弃，怀不可从，子必速行！……子必有晋，若何怀安？</span>（疚：害。君国：做一国之君。）重耳不听，于是齐姜把重耳灌醉，让他的亲随带他离开齐国了。</span></span></p></li></ul></div>
 </div>
 <a id="14.3"></a><div class="lyblob">
 <div class="lyblobtag"><a href="ly#14.3">14.3</a></div>
@@ -4691,7 +4694,7 @@ img.characterimg {
 <div class="lyblobtag"><a href="ly#14.15">14.15</a></div>
 <div class="lybloboriginaltext"><p>子曰：“晋文公谲而不正，<a href="#qihuangong">齐桓公</a>正而不谲。”</p></div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
-<li><p><a id="jinwengong"></a><span class="lyterm">晋文公</span>（前697年—前628年）：名重（<span class="lypinyin">chóng</span>）耳，晋献公次子，春秋五<a href="#badao">霸</a>之一。前656年（《左传·僖公四年》），献公的新夫人骊姬为替儿子争位，栽赃逼死了太子申生，并挑拨重耳父子关系。重耳被迫逃亡19年，辗转8国，一路躲避追杀，终于在62岁时返国继位（前636年），为君9年，开创了晋国长达一个多世纪的中原霸权。他逃难到楚国时，楚成王对其评价是：<span class="lyq">晋公子广而俭，文而有力。其从者肃而宽，忠而能力</span>（力：勤勉，尽力）。事见《左传·僖公二十三年》（前637年）。</p></li>
+<li><p><a id="jinwengong"></a><span class="lyterm">晋文公</span>（前697年—前628年）：名重（<span class="lypinyin">chóng</span>）耳，晋献公次子，春秋五<a href="#badao">霸</a>之一。前656年（《左传·僖公四年》），献公的新夫人骊姬为替儿子争位，栽赃逼死了太子申生，并挑拨重耳父子关系。重耳被迫逃亡19年，与一干心腹之臣辗转8国，一路躲避追杀，终于在62岁时返国继位（前636年），为君9年，开创了晋国长达一个多世纪的中原霸权。他逃难到楚国时，楚成王对其评价是：<span class="lyq">晋公子广而俭，文而有力。其从者肃而宽，忠而能力</span>（力：勤勉，尽力）。事见《左传·僖公二十三年》（前637年）。</p></li>
 <li>
 <p><a id="ju2a"></a><span class="lyterm">谲</span>（<span class="lypinyin">jué</span>）：欺诈，诡诈。现代汉语常常“诡谲”连用。</p>
 <p>孔子评价的晋文公之谲，解释不一。<a id="chengpuzhizhan"></a>一说是指前632年晋国为救援宋国，与楚国进行的城濮（<span class="lypinyin">pú</span>，在今山东省菏泽市鄄（<span class="lypinyin">juàn</span>）城县）之战。当时晋文公先用手段使亲楚的曹、卫两国与楚断交，激怒楚军，然后退兵三舍（<span class="lypinyin">shè</span>，1舍合30里），表示感念楚国的款待旧情。开战后，晋国下军将战马披上虎皮，抢先击破了楚方较弱的右翼——陈、蔡联军；随即上军主动退却，弄得尘土漫天，伪装全军溃败的模样，诱使楚军深入追击；然后中军拦腰斩断，上军从侧面夹攻，击溃了楚军左翼。楚中军主力孤掌难鸣，大败而归，总帅<a href="#lingyin">令尹</a>子玉也引咎自尽。晋国巧计以弱胜强，一战而霸，可能孔子认为有失“堂堂之阵、正正之师”的风范。</p>
@@ -5022,7 +5025,7 @@ img.characterimg {
 <div class="lybloboriginaltext"><p>在陈绝粮，从者病莫能兴。<a href="#zilu">子路</a>愠，见曰：“君子亦有穷乎？”子曰：“君子固穷，小人穷斯滥矣。”</p></div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
 <li><p><span class="lyterm">病莫能兴</span>。<a id="bing4"></a><span class="lyterm">病</span>：困苦，困乏，这里指因为断粮而饿坏了。<span class="lyterm">兴</span>：起身。有的书在“病”之后加逗号，考虑到结构相同的“爱莫能助”、“苦不堪言”都是耳熟能详，就不多此一举了。</p></li>
-<li><p><span class="lyterm">固穷</span>：在艰苦困境中保持意志坚定（不违仁）。<span class="lyterm"><a href="#gu4a">固</a></span>：动词，安守，坚守。<a id="qiong2"></a><span class="lyterm">穷</span>：本义为已达尽头，尽，完，引申为困窘，贫乏，又引申为不得志。反义词是<a href="#da2">达</a>。<span class="lyexample"><span>【例】</span><span>成语“穷途末路”。<a id="qiongda"></a>《孟子·尽心上》：<span class="lyq">穷则独善其身，达则兼善天下。</span></span></span><span class="lyseealso"><span>【参】</span><span><a href="#4.5" class="lyref">4.5</a> <a href="#4.9" class="lyref">4.9</a> <a href="#6.7" class="lyref">6.7</a> 。《韩诗外传》第1卷第8章：<span class="lyq">厄穷而不悯，劳辱而不<a href="#gou3">苟</a>，然后有<a href="#zhi4b">致</a>也。</span>（<a id="e4b"></a>厄：困苦。<a id="min3b"></a>悯：忧伤。）</span></span></p></li>
+<li><p><span class="lyterm">固穷</span>：在艰苦困境中保持意志坚定（不违仁）。<span class="lyterm"><a href="#gu4a">固</a></span>：动词，安固于，即安守，坚守。<a id="qiong2"></a><span class="lyterm">穷</span>：本义为已达尽头，尽，完，引申为困窘，贫乏，又引申为不得志。反义词是<a href="#da2">达</a>。<span class="lyexample"><span>【例】</span><span>成语“穷途末路”。<a id="qiongda"></a>《孟子·尽心上》：<span class="lyq">穷则独善其身，达则兼善天下。</span></span></span><span class="lyseealso"><span>【参】</span><span><a href="#4.5" class="lyref">4.5</a> <a href="#4.9" class="lyref">4.9</a> <a href="#6.7" class="lyref">6.7</a> 。《韩诗外传》第1卷第8章：<span class="lyq">厄穷而不悯，劳辱而不<a href="#gou3">苟</a>，然后有<a href="#zhi4b">致</a>也。</span>（<a id="e4b"></a>厄：困苦。<a id="min3b"></a>悯：忧伤。）</span></span>思考：“君子固穷”与“树挪死，人挪活”相矛盾吗？“固”与“挪”应以什么为准绳？</p></li>
 <li><p><span class="lyterm">滥</span>：过度，无节制，引申指抛弃操守地胡作非为，乱来。<span class="lyexample"><span>【例】</span><span>成语“宁缺勿滥”，熟语“滥用职权”。</span></span></p></li>
 </ul></div>
 </div>
@@ -5607,10 +5610,13 @@ img.characterimg {
 <div class="lyblobannotation"><ul class="lyblobitemize">
 <li><p><span class="lyterm">佛肸</span>（<span class="lypinyin">bì xī</span>）：晋国大夫，<span class="lyterm">中牟</span>（位于晋、卫、齐之间，在今河南省鹤壁市）邑宰。<a href="#liuqingneizhan">前490年夏</a>，晋国主政大臣赵简子清剿政敌范氏、中行氏的残余势力，进攻支持范氏的卫国，佛肸也支持范氏，于是中牟被晋军围困。事见《左传·哀公五年》。佛肸召孔子之事，未见于现存史料。</p></li>
 <li>
-<p><span class="lyterm">磷</span>（<span class="lypinyin">lìn</span>）：变薄，减损。孔子引用的这两句诗，出处现已不详。</p>
-<p><span class="lyterm">涅（<span class="lypinyin">niè</span>）而不缁（<span class="lypinyin">zī</span>）</span>：染也不变黑。<span class="lyterm">涅</span>：黑泥，黑石，用作动词，用黑颜料浸染。<span class="lyterm">缁</span>：黑色。</p>
+<p><span class="lyterm">磷</span>（<span class="lypinyin">lìn</span>）：变薄，减损。<span class="lyterm">涅（<span class="lypinyin">niè</span>）而不缁（<span class="lypinyin">zī</span>）</span>：染也不变黑。<span class="lyterm">涅</span>：黑泥，黑石，用作动词，用黑颜料浸染。<span class="lyterm">缁</span>：黑色。</p>
+<p>孔子引用的这两句诗，出处今已不详。<span class="lyseealso"><span>【参】</span><span>《论语注疏》：<span class="lyq">以喻君子虽居浊乱，浊乱不能污也。</span>《四书集注》引北宋杨时语：<span class="lyq">坚白不足而欲自试于磨涅，其不磷缁也者几希。</span></span></span></p>
 </li>
-<li><p><a id="paogua"></a><span class="lyterm">匏（<span class="lypinyin">páo</span>）瓜</span>：葫芦属草本植物，果实比葫芦大，晾干后可以做瓢，或系在腰间凫水。孔子用它来比喻无知无觉、无欲无求、缺乏主观能动性的“死物”，也许因为前面引用的诗里有提到，也许附近正吊着一个匏瓜晒，已无法确考。</p></li>
+<li>
+<p><a id="paogua"></a><span class="lyterm">匏（<span class="lypinyin">páo</span>）瓜</span>：一种短颈大腹的葫芦，味苦不宜食用，长成晒干后可以做瓢，或系在腰间凫水。<span class="lyseealso"><span>【参】</span><span>《国语·鲁语下》：<span class="lyq">夫苦匏不材于人，共济而已。</span>（材：动词，用，指食用。）</span></span></p>
+<p>孔子用它来比喻无能无用、无欲无求的“死物”，也许因为前面引用的诗里有提到，也许附近正吊着一个匏瓜，已无法确考。孔子当时是汲汲求为世用的。</p>
+</li>
 </ul></div>
 </div>
 <a id="17.8"></a><div class="lyblob">
@@ -6002,7 +6008,7 @@ img.characterimg {
 <div class="lyblobannotation"><ul class="lyblobitemize"><li><p><span class="lyterm">季騧</span>（<span class="lypinyin">guā</span>）等8人的事迹无法确考。他们的名字按伯仲叔季两两排列，古注认为是<a href="#zhouchao">周</a>初同母所生的4对孪生兄弟。<span class="lyseealso"><span>【参】</span><span>《春秋繁露·郊语》：<span class="lyq">周国子多贤，蕃至于骈孕男者四，四产而得八男，皆君子俊雄也。此天之所以兴周国也，非周国之所能为也。</span>（蕃（<span class="lypinyin">fán</span>）：子孙繁盛。骈孕：怀双胞胎。）</span></span></p></li></ul></div>
 </div>
 <a id="19"></a><h1 class="lybodychapter">19. 子张</h1>
-<p>本篇所记是<a href="#zizhang">子张</a>、<a href="#zixia">子夏</a>、<a href="#ziyou">子游</a>、<a href="#zengshen">曾参</a>、<a href="#zigong">子贡</a>的言行。其中既折射出孔子的精神，也体现了各人的特点。</p>
+<p>本篇所记为<a href="#zizhang">子张</a>、<a href="#zixia">子夏</a>、<a href="#ziyou">子游</a>、<a href="#zengshen">曾参</a>、<a href="#zigong">子贡</a>的言行。其中既有各人的特点，也折射出孔子的精神。</p>
 <a id="19.1"></a><div class="lyblob">
 <div class="lyblobtag"><a href="ly#19.1">19.1</a></div>
 <div class="lybloboriginaltext"><p><a href="#zizhang">子张</a>曰：“士见危致命，见得思义，祭思敬，丧思哀，其可已矣。”</p></div>
