--- a/aboly.html
+++ b/aboly.html
@@ -5615,7 +5615,7 @@ img.characterimg {
 </li>
 <li>
 <p><a id="paogua"></a><span class="lyterm">匏（<span class="lypinyin">páo</span>）瓜</span>：一种短颈大腹的葫芦，味苦不宜食用，长成晒干后可以做瓢，或系在腰间凫水。<span class="lyseealso"><span>【参】</span><span>《国语·鲁语下》：<span class="lyq">夫苦匏不材于人，共济而已。</span>（材：动词，用，指食用。）</span></span></p>
-<p>孔子用它来比喻无能无用、无欲无求的“死物”，也许因为前面引用的诗里有提到，也许附近正吊着一个匏瓜，已无法确考。孔子当时是汲汲求为世用的。</p>
+<p>孔子用它来比喻无能无用、无欲无求的“死物”，也许因为前面引用的诗里有提到，也许附近正吊着一个匏瓜，已无法确考。孔子当时是汲汲求为世用的。后来有成语“匏瓜空悬”，比喻有才志的人却像匏瓜一样被闲置不用。</p>
 </li>
 </ul></div>
 </div>
