--- a/aboly.html
+++ b/aboly.html
@@ -1084,7 +1084,7 @@ img.characterimg {
 <div class="lybloboriginaltext"><p><a href="#zizhang">子张</a>学干禄。子曰：“多闻阙疑，慎言其余，则寡尤；多见阙殆，慎行其余，则寡悔。言寡尤，行寡悔，禄在其中矣。”</p></div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
 <li>
-<p><span class="lyterm">干（<span class="lypinyin">gān</span>）禄</span>：挣公家俸禄，即做官。<a id="gan1"></a><span class="lyterm">干</span>：动词，本义为触犯，冲扰，引申为求取，索求，有行为出格的意味，用作谦卑文雅的说法。<span class="lyexample"><span>【例】</span><span>成语“矫情干誉”（矫：逆，违背）。王安石《宝应二三进士见送乞诗》：<span class="lyq">少喜功名尽坦<a href="#tu2">涂</a>，那知干世最崎岖。</span>（干世：涉世，求用于世。）</span></span></p>
+<p><a id="ganlu"></a><span class="lyterm">干（<span class="lypinyin">gān</span>）禄</span>：挣公家俸禄，即做官。<a id="gan1"></a><span class="lyterm">干</span>：动词，本义为触犯，冲扰，引申为求取，索求，有行为出格的意味，用作谦卑文雅的说法。<span class="lyexample"><span>【例】</span><span>成语“矫情干誉”（矫：逆，违背）。王安石《宝应二三进士见送乞诗》：<span class="lyq">少喜功名尽坦<a href="#tu2">涂</a>，那知干世最崎岖。</span>（干世：涉世，求用于世。）</span></span></p>
 <p><a id="lu4a"></a><span class="lyterm">禄</span>：官俸，当官挣得的薪资。<span class="lyexample"><span>【例】</span><span>成语“高官厚禄”。</span></span></p>
 </li>
 <li>
@@ -1867,7 +1867,7 @@ img.characterimg {
 <li><p><span class="lyterm">治其赋</span>：领导、训练其军队。<span class="lyterm">赋</span>：田地税，因为当时是根据田地面积计算人口去服<a href="#bingyi">兵役</a>，所以引申指军队。</p></li>
 <li>
 <p><a id="yi4c"></a><span class="lyterm">邑</span>（<span class="lypinyin">yì</span>）：城镇，大小不等，常作为天子赐予诸侯，或诸侯赐予卿大夫的封地。一邑之宰多由家臣担任。<span class="lyseealso"><span>【参】</span><span>《左传·庄公二十八年》：<span class="lyq">凡邑，有宗庙先君之主曰都，无曰邑。邑曰筑，都曰城。</span>（主：即神主，祭祀用的牌位。）</span></span></p>
-<p><span class="lyterm">千室之邑</span>与<span class="lyterm">百<a href="#sheng4a">乘</a>之<a href="#jia1">家</a></span>所指相同，均为卿大夫的封邑。<span class="lyterm">室</span>：家庭，住户。<span class="lyseealso"><span>【参】</span><span>据皇侃义疏，<span class="lyq">地方一里为井，井有三家</span>（家即室），则1000室之邑约合地方18.3里。按《左传·成公元年》杜预注，64井出兵车1乘，直接推算的话，100乘之家合地方80里，比于诸侯了。但“千室”可以换算为领地，“百乘”则是礼制。天子地方千里，合15625乘，符合<a href="#bingyi">万乘之尊</a>的定位。</span></span></p>
+<p><span class="lyterm">千室之邑</span>与<span class="lyterm">百<a href="#sheng4a">乘</a>之<a href="#jia1">家</a></span>所指相同，均为卿大夫的封邑。<span class="lyterm">室</span>：家庭，住户。<span class="lyseealso"><span>【参】</span><span>据皇侃义疏，<span class="lyq">地方一里为井，井有三家</span>（家即室），则1000室之邑约合地方18.3里。按《左传·成公元年》西晋杜预注，64井出兵车1乘，直接推算的话，100乘之家合地方80里，比于诸侯了。但“千室”可以换算为领地，“百乘”则是礼制。天子地方千里，合15625乘，符合<a href="#bingyi">万乘之尊</a>的定位。</span></span></p>
 </li>
 <li><p><span class="lyterm"><a href="#wei2b">为</a>之宰</span>：做它的总管。<span class="lyterm">宰</span>：即家宰，卿大夫家里的总管，管家。<a id="zhi1c"></a><span class="lyterm">之</span>：代词，其，它的。<span class="lyexample"><span>【例】</span><span><a href="#18.1" class="lyref">18.1</a> <span class="lyq">微子去之，箕子为之奴。</span></span></span></p></li>
 </ul></div>
@@ -2427,7 +2427,7 @@ img.characterimg {
 <div class="lybloboriginaltext"><p>子曰：“默而识之，学而不厌，诲人不倦，何有于我哉？”</p></div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
 <li><p><span class="lyterm">默而识（<span class="lypinyin">zhì</span>）之</span>：潜心静气地记住它（指所学的知识）。<a id="zhi4c"></a><span class="lyterm">识</span>：本义为标志，记号，用作动词，记住。<span class="lyexample"><span>【例】</span><span><a href="#7.28" class="lyref">7.28</a> <span class="lyq">择其善者而从之，多见而识之。</span></span></span><span class="lyseealso"><span>【参】</span><span>《周易·大畜》：<span class="lyq">君子以多识前言往行，以畜其德。</span>（畜：通“蓄”。）《荀子·劝学》：<span class="lyq">君子之学也，入乎耳，箸乎心，布乎四体，行乎动静。端而言，蠕而动，一可以为法则。小人之学也，入乎耳，出乎口。口耳之间则四寸耳，曷足以美七<a href="#chi3">尺</a>之躯哉？</span>（箸：通“著”，显明。<a id="yi1"></a>一：全。蠕：微动。曷（<span class="lypinyin">hé</span>）：何。）</span></span></p></li>
-<li><p><span class="lyterm">厌</span>：吃饱，饱足，引申为满足，觉得够了，satiated，现代多用“餍”。（因过多而）厌烦、嫌恶是其后起义。</p></li>
+<li><p><a id="yan4"></a><span class="lyterm">厌</span>：吃饱，饱足，引申为满足，觉得够了，satiated，现代多用“餍”。（因过多而）厌烦、嫌恶是其后起义。</p></li>
 <li><p><span class="lyterm"><a href="#heyou">何有</a>于我哉？</span>：对我来说有什么难的呢？<span class="lyseealso"><span>【参】</span><span><a href="#5.28" class="lyref">5.28</a> </span></span></p></li>
 </ul></div>
 </div>
@@ -4027,7 +4027,10 @@ img.characterimg {
 <div class="lybloboriginaltext"><p><a href="#zizhang">子张</a>问明，子曰：“浸润之谮、肤受之愬，不行焉，可谓明也已矣。浸润之谮、肤受之愬，不行焉，可谓远也已矣。”</p></div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
 <li><p><span class="lyterm">明</span>：本义为视力敏锐，引申为观察分辨力强。<span class="lyseealso"><span>【参】</span><span>听觉灵敏叫“聪”，引申为感知理解力强。《史记·五帝本纪》：<span class="lyq">聪以知远，明以察微。</span>《史记·商君列传》中，赵良劝意气扬扬的商鞅不宜刻薄少恩，其中有：<span class="lyq">反听之谓聪，内视之谓明，自胜之谓强。<a href="#shun">虞舜</a>有言曰：“自<a href="#bei1">卑</a>也<a href="#shang4">尚</a>矣。”</span>英语的sharp可以形容视力、听力、反应等的灵敏，引申为尖刻、严厉。</span></span></p></li>
-<li><p><span class="lyterm">浸润之谮</span>（<span class="lypinyin">zèn</span>）：好像一点一滴慢慢渗入的（积久日深的）中伤。<span class="lyterm">谮</span>：诬陷。<span class="lyexample"><span>【例】</span><span>《史记·鲁周公世家》：<span class="lyq">及<a href="#chengwang">成王</a>用事，人或谮<a href="#zhougong">周公</a>，周公奔楚。</span></span></span></p></li>
+<li>
+<p><span class="lyterm">浸润之谮</span>（<span class="lypinyin">zèn</span>）：好像一点一滴慢慢渗入的（积久日深的）中伤。<span class="lyexample"><span>【例】</span><span>《左传》杜预序讲到经与传的关系，认为国史应该<span class="lyq">广记而备言之，其文缓，其旨远，将令学者原始要终，寻其枝叶，究其所穷。优而柔之，使自求之，<a href="#yan4">餍</a>而饫之，使自趋之。若江海之浸，膏泽之润，涣然冰释，怡然理顺，然后为得也。</span>（饫（<span class="lypinyin">yù</span>）：饱食。）这里的“浸”和“润”是正面的意义，即通过涵泳历史自然而然地通明经义。</span></span></p>
+<p><span class="lyterm">谮</span>：诬陷。<span class="lyexample"><span>【例】</span><span>《史记·鲁周公世家》：<span class="lyq">及<a href="#chengwang">成王</a>用事，人或谮<a href="#zhougong">周公</a>，周公奔楚。</span></span></span></p>
+</li>
 <li><p><span class="lyterm">肤受之愬</span>（<span class="lypinyin">sù</span>）：好像皮肤上都有感觉似的（火辣辣的）诽谤。<a id="su4"></a><span class="lyterm">愬</span>：通“诉”，本义为告诉，诉说，引申为诽谤，说坏话。<span class="lyexample"><span>【例】</span><span><a href="#14.36" class="lyref">14.36</a> <span class="lyq">公伯寮愬子路于季孙。</span></span></span></p></li>
 <li><p><span class="lyterm">远</span>：有远见，见识远大。</p></li>
 </ul></div>
@@ -4800,7 +4803,7 @@ img.characterimg {
 <a id="14.24"></a><div class="lyblob">
 <div class="lyblobtag"><a href="ly#14.24">14.24</a></div>
 <div class="lybloboriginaltext"><p>子曰：“古之学者为己，今之学者为人。”</p></div>
-<div class="lyblobannotation"><ul class="lyblobitemize"><li><p><span class="lyterm">为（<span class="lypinyin">wèi</span>）己</span>：为自己（而学）。<span class="lyseealso"><span>【参】</span><span>《后汉书·桓荣传》对这句话的解释是：<span class="lyq">为人者，凭誉以显物；为己者，因心以会道。</span>（物：与“我”相对，外境。）1929年，陈寅恪赠诗给北京大学史学系毕业生：<span class="lyq">群趋东邻受国史，神州大夫羞欲死。田巴鲁仲两无成，要待诸君洗斯耻。天赋迂儒自圣狂，读书不肯为人忙。平生所学宁堪赠，独此区区是秘方。</span>（东邻：指日本。大夫：指<a href="#shidafu">士大夫</a>。田巴：战国时齐国辨士。鲁仲：即“义不帝秦”的鲁仲连，战国时齐国高士，12岁就折服了“一日服千人”的田巴。二者似比喻当时学术界的权威与新锐。宁（<span class="lypinyin">nìng</span>）：岂。）</span></span></p></li></ul></div>
+<div class="lyblobannotation"><ul class="lyblobitemize"><li><p><span class="lyterm">为（<span class="lypinyin">wèi</span>）己</span>：为自己（而学）。<span class="lyseealso"><span>【参】</span><span>《后汉书·桓荣传》对这句话的解释是：<span class="lyq">为人者，凭誉以显物；为己者，因心以会道。</span>（凭：附。物：与“我”相对，外境。）《荀子·劝学》认为：<span class="lyq">君子之学也，以美其身；小人之学也，以为禽犊。</span>（禽犊：一说为馈献之物，代表进身<a href="#ganlu">干禄</a>，一说为玩物，并非敬心诚意，总之都是当作“身外之物”。）1929年，陈寅恪赠诗给北京大学史学系毕业生：<span class="lyq">群趋东邻受国史，神州大夫羞欲死。田巴鲁仲两无成，要待诸君洗斯耻。天赋迂儒自圣狂，读书不肯为人忙。平生所学宁堪赠，独此区区是秘方。</span>（东邻：指日本。大夫：指<a href="#shidafu">士大夫</a>。田巴：战国时齐国辨士。鲁仲：即“义不帝秦”的鲁仲连，战国时齐国高士，12岁就折服了“一日服千人”的田巴。二者似比喻当时学术界的权威与新锐。宁（<span class="lypinyin">nìng</span>）：岂。）</span></span></p></li></ul></div>
 </div>
 <a id="14.25"></a><div class="lyblob">
 <div class="lyblobtag"><a href="ly#14.25">14.25</a></div>
@@ -5615,7 +5618,7 @@ img.characterimg {
 </li>
 <li>
 <p><a id="paogua"></a><span class="lyterm">匏（<span class="lypinyin">páo</span>）瓜</span>：一种短颈大腹的葫芦，味苦不宜食用，长成晒干后可以做瓢，或系在腰间凫水。<span class="lyseealso"><span>【参】</span><span>《国语·鲁语下》：<span class="lyq">夫苦匏不材于人，共济而已。</span>（材：动词，用，指食用。）</span></span></p>
-<p>孔子用它来比喻无能无用、无欲无求的“死物”，也许因为前面引用的诗里有提到，也许附近正吊着一个匏瓜，已无法确考。孔子当时是汲汲求为世用的。后来有成语“匏瓜空悬”，比喻有才志的人却像匏瓜一样被闲置不用。</p>
+<p>孔子用它来比喻无能无用、无欲无求的“死物”，也许因为前面引用的诗里有提到，也许附近正吊着一个匏瓜，已难以确考。孔子当时是汲汲求为世用的。后来有成语“匏瓜空悬”，比喻有才志的人却无从发挥，像匏瓜一样被闲置不用。</p>
 </li>
 </ul></div>
 </div>
@@ -5831,7 +5834,7 @@ img.characterimg {
 <div class="lyblobannotation">
 <ul class="lyblobitemize"><li>
 <p><span class="lyterm">难养</span>：近似现代口语的难应付、难伺候（上对下的语气）。这是孔子在特定时代的观点，不知因何而发，尽管生动形象，却让现代注家很尴尬。古注多把<span class="lyterm">女子</span>解释为姬妾，<span class="lyterm">小人</span>解释为臣仆。从字面上看，既然存在供养关系，又可以自主地亲近或疏远，这两个词确实不太像泛指，而是说关系较近密的下位者，很自然的例子就是姬妾、宠婢、亲随、弄臣等。在古代，<a href="#daren">小人</a>只是君子的附庸，而一家之中长辈、近亲以外的女性，除了正妻可以举案齐眉，地位确实普遍偏低。如果硬从《论语》里找对应，或许和 <a href="#18.4" class="lyref">18.4</a> <span class="lyq">齐人归女乐</span>有关。</p>
-<p><span class="lyseealso"><span>【参】</span><span>《孝经·孝治》：<span class="lyq">治家者，不敢失于臣妾，而况于妻子乎？</span>（<a id="chen2"></a>臣：男奴，本义为战俘。妾：女奴，本义为有罪之女。）《四书集注》：<span class="lyq">君子之于臣妾，庄以<a href="#li4">莅</a>之，慈以<a href="#xu4a">畜</a>之，则无二者之患矣。</span>《左传·僖公二十四年》（前636年），<a href="#yidihuaxia">狄</a>人助周襄王（前652年—前619年在位）伐郑有功，襄王欲立狄女为王后，大夫富辰的谏言里有<span class="lyq">女德无极，妇怨无终</span>之语，就是说正负区间很大，不知是否对孔子有所启发。晋代杜预对这句谏言的注解，刚好可以移用于孔子的后两句：<span class="lyq">近之则不知止足，远之则忿怨无已。</span>亦参 <a href="#16.8" class="lyref">16.8</a> <span class="lyq">小人不知天命而不畏也，狎大人，侮圣人之言。</span>后来作为蔑称的“儿女子”，即短浅无能之辈，可能也与本章有关，如《史记·淮阴侯列传》：<span class="lyq">信方斩，曰：“吾悔不用蒯通之计，乃为儿女子所诈，岂非天哉！”（指合谋诱骗韩信自投罗网的萧何与吕后。）</span></span></span></p>
+<p><span class="lyseealso"><span>【参】</span><span>《孝经·孝治》：<span class="lyq">治家者，不敢失于臣妾，而况于妻子乎？</span>（<a id="chen2"></a>臣：男奴，本义为战俘。妾：女奴，本义为有罪之女。）《四书集注》：<span class="lyq">君子之于臣妾，庄以<a href="#li4">莅</a>之，慈以<a href="#xu4a">畜</a>之，则无二者之患矣。</span>《左传·僖公二十四年》（前636年），<a href="#yidihuaxia">狄</a>人助周襄王（前652年—前619年在位）伐郑有功，襄王欲立狄女为王后，大夫富辰的谏言里有<span class="lyq">女德无极，妇怨无终</span>之语，就是说正负区间很大，不知是否对孔子有所启发。杜预对这句谏言的注解，刚好可以移用于孔子的后两句：<span class="lyq">近之则不知止足，远之则忿怨无已。</span>亦参 <a href="#16.8" class="lyref">16.8</a> <span class="lyq">小人不知天命而不畏也，狎大人，侮圣人之言。</span>后来作为蔑称的“儿女子”，即短浅无能之辈，可能也与本章有关，如《史记·淮阴侯列传》：<span class="lyq">信方斩，曰：“吾悔不用蒯通之计，乃为儿女子所诈，岂非天哉！”（指合谋诱骗韩信自投罗网的萧何与吕后。）</span></span></span></p>
 </li></ul>
 <p><span class="lyseealso"><span>【参】</span><span>梁启超《要籍解题及其读法》中评价荀子学说的话，也适用于本章：<span class="lyq">凡立言总带有几分时代彩色，故孟子贵“知人论世”。荀子生今二千余年前，其言有专为当时之社会而发者，自当分别观之，不可盲从以<a href="#ze2a">责</a>效于今日。但亦不可以今日眼光绳之，遂抹杀其在当日之价值也。至于其学说之含有永久性者——即并非对于时代问题而发言者，则无论何时，则可以咨其严刻之评隲也。</span>（<a id="sheng2"></a>绳：衡量，以……为准。隲（<span class="lypinyin">zhì</span>）：评定。）</span></span></p>
 </div>
