--- a/aboly.html
+++ b/aboly.html
@@ -712,7 +712,7 @@ img.characterimg {
 <div class="lyblobannotation"><ul class="lyblobitemize">
 <li>
 <p><a id="xianxianyise"></a><span class="lyterm">贤贤易色</span>：重贤轻色。第一个<span class="lyterm">贤</span>是动词，以……为贤，尊崇，重视，value，honor；第二个是名词，德行才能，virtue。<span class="lyexample"><span>【例】</span><span><a href="#11.16" class="lyref">11.16</a> <span class="lyq">师与商也孰贤？</span><a href="#6.11" class="lyref">6.11</a> <span class="lyq">贤哉回也！</span>《三国志·魏书·武文世王公》裴松之注引魏宗室曹冏（<span class="lypinyin">jiǒng</span>）上书：<span class="lyq">古之王者，必建同<a href="#xingshi">姓</a>以明亲亲，必树异姓以明贤贤。……非贤无与兴功，非亲无与辅治。</span>（建：指分封。）《史记·梁孝王世家》：<span class="lyq"><a href="#shangchao">殷</a>道尊尊，<a href="#zhouchao">周</a>道<a href="#qinqin">亲亲</a>。</span></span></span></p>
-<p><a id="xian2"></a>“贤”字从贝，本义为财富多，又泛指好。用于比较，表示胜（过），优（于）。用于人，表示才能佳，德行优。东汉许慎的《说文解字》就解释为<span class="lyq">多才也</span>。《三国志·魏书·武帝纪》载，建安十五年（210年）春，曹操颁布《求贤令》，明言天下未定，<span class="lyq">唯才是举</span>，不论出身与品行。在《论语》中，仅凭才能出众，是称不起“贤人”的，随着儒学主流地位的确立，<a href="#de2">德</a>成为贤的必要部分。《孟子·公孙丑上》推崇<span class="lyq">贤者在位，能者在职</span>；南朝编著的《玉篇》将贤解释为<span class="lyq">有善行也</span>；《宋史·叶梦得传》引叶梦得言：<span class="lyq">贤者，有德之称；能者，有才之称。故<a href="#xianwang">先王</a>常使德胜才，不使才胜德。</span>近代选拔干部，过多注重思想可靠，忽视业务能力，也许是这个古老理念的流弊。中国中央电视台2002年7月的《<a href="http://www.tudou.com/programs/view/WV6V2SNNgLU/" class="lyurl" target="_blank">对话</a>》节目中，陈章良（时任北京大学副校长）与李开复（时任微软公司全球副总裁）作为人才的供需两方，讨论了人才的首选标准、人品应该谁负责等话题，可以作为评价“贤”的现代版参考。阅读后文时，还可以留意贤与<a href="#ren2">仁</a>的区别。</p>
+<p><a id="xian2"></a>“贤”字从贝，本义为财富多，又泛指好。用于比较，表示胜（过），优（于）。用于人，表示才能佳，德行优。东汉许慎的《说文解字》就解释为<span class="lyq">多才也</span>。《三国志·魏书·武帝纪》载，建安十五年（210年）春，曹操颁布《求贤令》，明言天下未定，<span class="lyq">唯才是举</span>，不论出身与品行。在《论语》中，仅凭才能出众，是称不起“贤人”的，随着儒学主流地位的确立，<a href="#de2">德</a>成为贤的必要部分。《孟子·公孙丑上》推崇<span class="lyq">贤者在位，能者在职</span>；南朝编著的《玉篇》将贤解释为<span class="lyq">有善行也</span>；《宋史·叶梦得传》引叶梦得言：<span class="lyq">贤者，有德之称；能者，有才之称。故<a href="#xianwang">先王</a>常使德胜才，不使才胜德。</span>近代选拔干部，过多注重思想可靠，忽视业务能力，也许是这个古老理念的流弊。中国中央电视台2002年7月的《<a href="http://v.youku.com/v_show/id_XNjEwNDI3NzI" class="lyurl" target="_blank">对话</a>》节目中，陈章良（时任北京大学副校长）与李开复（时任微软公司全球副总裁）作为人才的供需两方，讨论了人才的首选标准、人品应该谁负责等话题，可以作为评价“贤”的现代版参考。阅读后文时，还可以留意贤与<a href="#ren2">仁</a>的区别。</p>
 <p><a id="yi4g"></a><span class="lyterm">易</span>：动词，轻视。<span class="lyexample"><span>【例】</span><span>《史记·高祖本纪》：<span class="lyq">高祖为亭长，素易诸吏。</span></span></span><span class="lyterm">色</span>：美貌。</p>
 <p>古注有把“易色”解释成端肃态度，或者把“贤贤易色”解释成以好色之心重贤，“易”就是替换，也讲得通，但从内容顺序看，说的更像是择偶标准。</p>
 </li>
@@ -1415,7 +1415,7 @@ img.characterimg {
 <div class="lybloboriginaltext"><p><a href="#zigong">子贡</a>欲去告朔之饩羊，子曰：“<a href="#zigong">赐</a>也！尔爱其羊，我爱其礼。”</p></div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
 <li><p><span class="lyterm">去告朔（<span class="lypinyin">shuò</span>）之饩（<span class="lypinyin">xì</span>）羊</span>：省去在告朔祭祖时（按周礼应）宰杀的羊。<span class="lyterm">告朔</span>：诸侯每月朔日（阴历初一）都要举行的祭拜祖庙之礼，表示坐朝理政的开始。<span class="lyterm">饩</span>：活的牲畜。<span class="lyseealso"><span>【参】</span><span>《汉书·律历志》：<span class="lyq">自<a href="#wengong">文公</a>闰月不告朔，至此百有余年，莫能正<a href="#lishu">历数</a>，故子贡欲去其饩羊。</span></span></span></p></li>
-<li><p> 第一个<span class="lyterm">爱</span>指舍不得，吝惜。<span class="lyexample"><span>【例】</span><span>王若虚《焚驴志》：<span class="lyq">杀我而有利于人，吾何爱一死？</span></span></span>孔子表面上批评子贡，实际是对<a href="#sanhuan">三桓</a>主政下鲁国纲纪废弛的痛心。<span class="lyseealso"><span>【参】</span><span><a href="#3.5" class="lyref">3.5</a> </span></span></p></li>
+<li><p><a id="ai4"></a>第一个<span class="lyterm">爱</span>指舍不得，吝惜。<span class="lyexample"><span>【例】</span><span>王若虚《焚驴志》：<span class="lyq">杀我而有利于人，吾何爱一死？</span></span></span>孔子表面上批评子贡，实际是对<a href="#sanhuan">三桓</a>主政下鲁国纲纪废弛的痛心。<span class="lyseealso"><span>【参】</span><span><a href="#3.5" class="lyref">3.5</a> </span></span></p></li>
 </ul></div>
 </div>
 <a id="3.18"></a><div class="lyblob">
@@ -1447,7 +1447,7 @@ img.characterimg {
 <p>（关关：鸟鸣应和声。雎鸠：一种捕鱼为食的水鸟，朱熹《诗集传》说它们<span class="lyq">生有定偶而不相乱，偶常并游而相<a href="#xia2">狎</a>。</span>洲：水中陆地。窈窕（<span class="lypinyin">yǎo tiǎo</span>）：形容女子娴静美好。西汉扬雄《方言》说：<span class="lyq">秦、晋之间，美心为窈，美状为窕。</span>二字本义均为洞穴幽深，现代转指体态优美。好逑（<span class="lypinyin">hǎo qiú</span>）：好的配偶，良匹。荇（<span class="lypinyin">xìng</span>）菜：一种可食用水草，叶为对生心形，漂浮水面，茎根细长柔软，沉在水中。流：指顺水采择。<a id="wumei"></a>寤寐（<span class="lypinyin">wù mèi</span>）：醒着和睡着，指没日没夜地。服：思念。辗转反侧：《诗集传》：<span class="lyq">辗者，转之半；转者，辗之周；反者，辗之过；侧者，转之留。皆卧不安席之意。</span>芼（<span class="lypinyin">mào</span>）：采择。琴瑟友之是相会共处之乐，钟鼓乐之是憧憬婚庆之乐。）</p>
 </li>
 <li>
-<p><a id="yin2"></a><span class="lyterm">淫</span>：过度，无节制，本义为雨水不停。<span class="lyexample"><span>【例】</span><span>范仲淹《岳阳楼记》：<span class="lyq">淫雨霏霏，连月不开。</span></span></span></p>
+<p><a id="yin2"></a><span class="lyterm">淫</span>：过度，无节制，本义为雨水不停。<span class="lyexample"><span>【例】</span><span>北宋范仲淹《岳阳楼记》：<span class="lyq">淫雨霏霏，连月不开。</span></span></span></p>
 <p><span class="lyterm">伤</span>：损害，指过分哀愁以至有害。<span class="lyseealso"><span>【参】</span><span>《四书集注》：<span class="lyq">求之未得，则不能无寤寐反侧之忧；求而得之，则宜其有琴瑟钟鼓之乐。盖其忧虽深而不害于和，其乐虽盛而不失其正，故夫子称之如此。</span></span></span></p>
 </li>
 </ul></div>
@@ -1795,7 +1795,7 @@ img.characterimg {
 <div class="lybloboriginaltext"><p>子谓<a href="#nangongkuo">南容</a>：“邦有道，不废；邦无道，免于刑戮。”以其兄之子妻之。</p></div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
 <li><p><a id="fei4"></a><span class="lyterm">废</span>：弃置不用，搁置。<span class="lyterm">不废</span>指人尽其才而用，这里实指愿意承担社会责任，入世从政。</p></li>
-<li><p><span class="lyterm">其兄</span>：指孔子的哥哥孟皮。孟皮由于腿脚有残疾，不适合继承家族身份（<a href="#qingdafushi">士</a>），所以由孔子继承，有了话语权。</p></li>
+<li><p><span class="lyterm">其兄</span>：指孔子的<a href="#zongzhu">庶兄</a>孟皮。孟皮由于腿脚有残疾，不适合继承家族身份（<a href="#qingdafushi">士</a>），所以由孔子继承，有了话语权。</p></li>
 </ul></div>
 </div>
 <a id="5.3"></a><div class="lyblob">
@@ -2213,7 +2213,10 @@ img.characterimg {
 <a id="6.13"></a><div class="lyblob">
 <div class="lyblobtag"><a href="ly#6.13">6.13</a></div>
 <div class="lybloboriginaltext"><p>子谓<a href="#zixia">子夏</a>曰：“女为君子儒，无为小人儒。”</p></div>
-<div class="lyblobannotation"><ul class="lyblobitemize"><li><p><a id="ru2"></a><span class="lyterm">儒</span>：本义为春秋时期从巫（以舞降神）、祝（以辞告神）、卜（占卜吉凶）、史（掌典籍制度。以上详见《礼记·春官宗伯》）中分化出来的一种职业。从业者熟悉诗书礼乐，工作内容是传授道德礼仪方面的知识，主持婚丧嫁娶之类的仪式。后来，孔子开创的学派称为儒家，注重道德修养，崇尚仁礼忠孝。<span class="lyterm">君子儒</span>、<span class="lyterm">小人儒</span>的区别由此可辨。《论语》中仅有本章提到“儒”。<span class="lyseealso"><span>【参】</span><span><a href="#8.12" class="lyref">8.12</a> 。《论语注疏》：<span class="lyq">君子为儒，将以明道；小人为儒，则<a href="#jin1b">矜</a>其名。</span>《四书集注》引程颐语：<span class="lyq">君子儒<a href="#14.24">为己</a>，小人儒为人。</span>《礼记·儒行》托孔子之口描述了儒者的德行，尽管风格与《论语》差别明显，仍然可资参考。</span></span></p></li></ul></div>
+<div class="lyblobannotation"><ul class="lyblobitemize"><li>
+<p><a id="ru2"></a><span class="lyterm">儒</span>：本义为春秋时期从巫（以舞降神）、祝（以辞告神）、卜（占卜吉凶）、史（掌典籍制度。以上详见《礼记·春官宗伯》）中分化出来的一种职业。从业者熟悉诗书礼乐，工作内容是传授道德礼仪方面的知识，主持婚丧嫁娶之类的仪式。后来，孔子开创的学派称为儒家，注重道德修养，崇尚仁礼忠孝。<span class="lyterm">君子儒</span>、<span class="lyterm">小人儒</span>的区别由此可辨。《论语》中仅有本章提到“儒”。</p>
+<p><span class="lyseealso"><span>【参】</span><span><a href="#8.12" class="lyref">8.12</a> 。《论语注疏》：<span class="lyq">君子为儒，将以明道；小人为儒，则<a href="#jin1b">矜</a>其名。</span>《四书集注》引程颐语：<span class="lyq">君子儒<a href="#14.24">为己</a>，小人儒为人。</span>《礼记·儒行》托孔子之口描述了儒者的德行，包括自立、容貌、备豫、近人、特立、刚毅、忧思、任举、规为、交友、尊让等方面。如忧思者：<span class="lyq">今人与居，古人与稽；今世行之，后世以为楷。……身可危也，而志不可夺也；虽危，起居竟信其志，犹将不忘百姓之病也。</span>（稽：考校（是非得失），也就是拟合古仁人之心。楷：典范，楷模。起居：行动，做事。信：通“伸”。）这赋予了“儒者”浓重的历史责任感，可能也是范仲淹《岳阳楼记》的创作灵感之一。</span></span></p>
+</li></ul></div>
 </div>
 <a id="6.14"></a><div class="lyblob">
 <div class="lyblobtag"><a href="ly#6.14">6.14</a></div>
@@ -2495,7 +2498,7 @@ img.characterimg {
 <a id="7.10"></a><div class="lyblob">
 <div class="lyblobtag"><a href="ly#7.10">7.10</a></div>
 <div class="lybloboriginaltext"><p>子于是日哭，则不歌。</p></div>
-<div class="lyblobannotation"><ul class="lyblobitemize"><li><p><span class="lyterm">哭</span>：指吊祭逝者时的哀痛之哭。<span class="lyseealso"><span>【参】</span><span>《礼记·曲礼上》：<span class="lyq"><a href="#li3a">里</a>有殡，不巷歌。适墓不歌。哭日不歌。</span>《礼记·檀弓上》：<span class="lyq">吊于人，是日不乐。</span></span></span></p></li></ul></div>
+<div class="lyblobannotation"><ul class="lyblobitemize"><li><p><span class="lyterm">哭</span>：特指吊祭逝者时的哀痛之哭，内容承接上一章。<span class="lyseealso"><span>【参】</span><span>《礼记·曲礼上》：<span class="lyq"><a href="#li3a">里</a>有殡，不巷歌。适墓不歌。哭日不歌。</span>《礼记·檀弓上》：<span class="lyq">吊于人，是日不乐。</span></span></span></p></li></ul></div>
 </div>
 <a id="7.11"></a><div class="lyblob">
 <div class="lyblobtag"><a href="ly#7.11">7.11</a></div>
@@ -3943,7 +3946,7 @@ img.characterimg {
 <li>
 <p><span class="lyterm"><a href="#zongmiao">宗庙</a>之事，如会同，端章甫</span>：祭祀宗庙的时候，或者各国国君会盟的时候，穿得衣冠整齐。</p>
 <p>据《周礼·春官宗伯·大宗伯》，<span class="lyterm">会</span>是天子在王都之外召集诸侯，以行征伐之事；<span class="lyterm">同</span>是天子多年不巡视天下，则诸侯同来王都探问。这里的<span class="lyterm">会同</span>泛指诸侯会见。</p>
-<p><span class="lyterm">端</span>：一种黑色礼服，又称玄端。<span class="lyterm">章甫</span>：源自商朝的一种黑色礼帽。</p>
+<p><span class="lyterm">端</span>：一种黑色礼服，又称玄端。<span class="lyterm">章甫</span>：源自商朝的一种黑色礼帽。<span class="lyexample"><span>【例】</span><span>《礼记·儒行》开头，孔子自称<span class="lyq">长居<a href="#songguo">宋</a>，冠章甫之冠。</span></span></span></p>
 </li>
 <li><p><span class="lyterm"><a href="#xiang4">相</a></span>：司仪，傧相。</p></li>
 <li><p><span class="lyterm">鼓瑟希，铿（<span class="lypinyin">kēng</span>）尔</span>：（曾皙）弹瑟的音节慢慢稀落，铿的一声戛然而止。<span class="lyterm">铿</span>：象声词，金属撞击发出的洪亮声音。</p></li>
@@ -4736,7 +4739,7 @@ img.characterimg {
 <li><p><span class="lyterm">微</span>：副词，用于名词之前，构成表示假设、让步的分句，要是没有。<span class="lyexample"><span>【例】</span><span>范仲淹《岳阳楼记》：<span class="lyq">微斯人，吾谁与归？</span>《战国策·中山策·昭王既息民缮兵》：<span class="lyq">微白起，吾不能灭赵乎？</span></span></span></p></li>
 <li><p><span class="lyterm">被（<span class="lypinyin">pī</span>）发左衽（<span class="lypinyin">rèn</span>）</span>：披散头发、身着异族服装，指沦落成未开化的<a href="#yidihuaxia">野蛮人</a>。这里推崇的是管仲辅佐齐桓公“尊王<a href="#rang3">攘</a>夷”的业绩，包括救<a href="#shaogong">燕</a>于山戎、救<a href="#kangshu">卫</a>于狄等，事见《史记·齐太公世家》。<a id="pi1"></a><span class="lyterm">被</span>：通“披”，分散，覆盖。<a id="zuoren"></a><span class="lyterm">衽</span>：上衣前胸处交领的部分。传统汉服以左前襟压右前襟，称为右衽，反之则为<span class="lyterm">左衽</span>，是当时周边少数民族的习俗，也是汉族寿衣的穿法。</p></li>
 <li><p><a id="liang4"></a><span class="lyterm">谅</span>：本义为诚信，引申指目光短浅的固执、狭隘。<span class="lyexample"><span>【例】</span><span><a href="#16.4" class="lyref">16.4</a> <span class="lyq">友直、友谅、友多闻，益矣。</span><a href="#15.37" class="lyref">15.37</a> <span class="lyq">君子贞而不谅。</span></span></span><span class="lyseealso"><span>【参】</span><span><a href="#9.4" class="lyref">9.4</a> <a href="#19.11" class="lyref">19.11</a> </span></span></p></li>
-<li><p><span class="lyterm">自经于沟渎</span>：上吊死在荒野小山沟。<a id="goudu"></a><span class="lyterm">沟渎</span>：田间水道，比喻默默无闻的小地方，意思是死得轻于鸿毛。</p></li>
+<li><p><span class="lyterm">自经于沟渎</span>：上吊死在荒野小山沟。<a id="goudu"></a><span class="lyterm">沟渎</span>：田间水道，比喻默默无闻的小地方，意思是死得轻于鸿毛。<span class="lyseealso"><span>【参】</span><span>《礼记·儒行》：<span class="lyq"><a href="#ai4">爱</a>其死以有待也，养其身以有为也。</span></span></span></p></li>
 </ul></div>
 </div>
 <a id="14.18"></a><div class="lyblob">
